tweaked some animations slightly, fixed svg cutoff issue

--- a/src/Stylesheets/App.scss
+++ b/src/Stylesheets/App.scss
@@ -140,7 +140,7 @@ html, body {
       font-size: 50px;
       margin: 0;
       opacity: 0;
-      @include animate(fadein, 1.5s, 0s, forwards);
+      @include animate(fadein, 2.5s, 0.5s, forwards);
 
       svg > g > #idot {
         @include animate(bounce, 1s, 0.1s, forwards);
@@ -153,7 +153,7 @@ html, body {
       font-size: 50px;
       margin: 0 0 10px 0;
       opacity: 0;
-      @include animate(fadein, 1.5s, 1s, forwards);
+      @include animate(fadein, 2.5s, 0.5s, forwards);
 
       span {
         color: #d8a347;
@@ -161,7 +161,7 @@ html, body {
     }
 
     #line {
-      @include animate(fadein, 1.5s, 2s, forwards);
+      @include animate(fadein, 1.5s, 1.5s, forwards);
       font-size: 20px;
       margin: 5px 0 0 0;
       opacity: 0;
